# oblo

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  cmake-variants.yaml  conanfile.py  conanfile.txt  oblo.code-workspace
editor/app/: CMakeLists.txt
editor/app/src/: app.cpp  app.hpp  empty.cpp  empty.hpp  main.cpp  vulkan_test.cpp  vulkan_test.hpp
editor/editor/: CMakeLists.txt
oblo/: CMakeLists.txt
oblo/app/: CMakeLists.txt
oblo/app/app/: CMakeLists.txt
oblo/app/imgui/: CMakeLists.txt
oblo/app/sandbox/: CMakeLists.txt
oblo/app/sandbox/src/: sandbox.cpp
oblo/asset/: CMakeLists.txt
oblo/asset/test/: watch_test.cpp
oblo/ast/: CMakeLists.txt
oblo/ast/test/: ast_test.cpp
oblo/codegen/: CMakeLists.txt
oblo/core/: CMakeLists.txt
oblo/core/test/: buffer_table_test.cpp  compressed_point_with_flags_test.cpp  deque_test.cpp  dynamic_array_test.cpp  filesystem_test.cpp  flat_dense_map_test.cpp  future_test.cpp  graph_test.cpp  intersection_test.cpp  invoke_test.cpp  iterator_test.cpp  math_test.cpp  platform_test.cpp  power_of_two_test.cpp  ring_buffer_test.cpp  service_registry_test.cpp  stack_resource_test.cpp  string_builder_test.cpp  string_interner_test.cpp  string_test.cpp  time_test.cpp  type_id_test.cpp  unique_ptr_test.cpp  uuid_test.cpp  variant_test.cpp  zip_iterator_test.cpp
oblo/cpurt/: CMakeLists.txt
oblo/cpurt/test/: bvh_test.cpp
oblo/dotnet/: CMakeLists.txt
oblo/dotnet/asset/: CMakeLists.txt
oblo/dotnet/behaviour/: CMakeLists.txt
oblo/dotnet/bindings/: CMakeLists.txt
oblo/dotnet/bindings/generator/: CMakeLists.txt
oblo/dotnet/bindings/native/: CMakeLists.txt
oblo/dotnet/managed/: BehaviourSystem.cs  CMakeLists.txt  RuntimeHost.cs
oblo/dotnet/managed/Oblo.Runtime/: RuntimeHost.cs
oblo/dotnet/runtime/: CMakeLists.txt
oblo/dotnet/runtime/resources/: oblo.runtimeconfig.json
oblo/ecs/: CMakeLists.txt
oblo/ecs/test/: components_tags_test.cpp  deferred_test.cpp  entity_pool_test.cpp  entity_registry_test.cpp  range_test.cpp  single_archetype_test.cpp  type_registry_test.cpp
oblo/editor/app/: CMakeLists.txt
oblo/editor/common/: CMakeLists.txt
oblo/editor/core/: CMakeLists.txt
oblo/editor/windows/: CMakeLists.txt
oblo/engine/: CMakeLists.txt
oblo/gpu/: CMakeLists.txt
oblo/gpu/core/: CMakeLists.txt
oblo/gpu/core/test/: staging_buffer_test.cpp
oblo/gpu/sandbox/: CMakeLists.txt
oblo/gpu/vulkan/: CMakeLists.txt
oblo/graphics/: CMakeLists.txt
oblo/graphics/reflection/: graphics_reflection.hpp
oblo/importers/: CMakeLists.txt
oblo/importers/test/: gltf_import_test.cpp
oblo/include/oblo/acceleration/: bvh.hpp  triangle_container.hpp
oblo/include/oblo/core/: array_size.hpp  ring_buffer.hpp  size.hpp  small_vector.hpp  stack_allocator.hpp  utility.hpp  zip_iterator.hpp
oblo/include/oblo/math/: aabb.hpp  angle.hpp  constants.hpp  line.hpp  random.hpp  ray.hpp  triangle.hpp  vec3.hpp
oblo/include/oblo/rendering/: camera.hpp  material.hpp  raytracer.hpp
oblo/input/: CMakeLists.txt
oblo/log/: CMakeLists.txt
oblo/log/test/: deque_test.cpp  filesystem_test.cpp  graph_test.cpp  intersection_test.cpp  iterator_test.cpp  uuid_test.cpp
oblo/luau/: CMakeLists.txt
oblo/luau/asset/: CMakeLists.txt
oblo/luau/runtime/: CMakeLists.txt
oblo/luau/runtime/reflection/: luau_reflection.hpp
oblo/metrics/: CMakeLists.txt
oblo/modules/: CMakeLists.txt
oblo/nodes/: CMakeLists.txt
oblo/nodes/common/: CMakeLists.txt
oblo/nodes/core/: CMakeLists.txt
oblo/nodes/core/test/: node_graph_test.cpp
oblo/nodes/editor/: CMakeLists.txt
oblo/options/: CMakeLists.txt
oblo/options/src/oblo/: options_manager.cpp  options_module.cpp
oblo/options/test/: options_test.cpp
oblo/project/: CMakeLists.txt
oblo/properties/: CMakeLists.txt
oblo/properties/test/: json_test.cpp  properties_test.cpp
oblo/raytracer/: CMakeLists.txt
oblo/reflection/: CMakeLists.txt
oblo/reflection/annotations/: CMakeLists.txt
oblo/reflection/codegen/: CMakeLists.txt
oblo/reflection/core/test/: fields_test.cpp
oblo/reflection/test/: fields_test.cpp
oblo/render_graph/: CMakeLists.txt
oblo/render_graph/test/: render_graph_test.cpp
oblo/renderer/: CMakeLists.txt
oblo/renderer/reflection/: vk_renderer_reflection.hpp
oblo/renderer/test/: frame_graph_test.cpp  mesh_database_test.cpp
oblo/resource/: CMakeLists.txt
oblo/runtime/: CMakeLists.txt
oblo/sandbox/: CMakeLists.txt
oblo/scene/: CMakeLists.txt
oblo/scene/core/: CMakeLists.txt
oblo/scene/core/reflection/: scene_reflection.hpp
oblo/scene/core/test/: ecs_serializer_test.cpp  materials_test.cpp
oblo/scene/editor/: CMakeLists.txt
oblo/scene/test/: ecs_serializer_test.cpp  materials_test.cpp
oblo/script/: CMakeLists.txt
oblo/script/asset/: CMakeLists.txt
oblo/script/behaviour/: CMakeLists.txt
oblo/script/behaviour/reflection/: script_behaviour_reflection.hpp
oblo/script/compiler/: CMakeLists.txt
oblo/script/compiler/resources/: cppgenlib.in.hpp
oblo/script/compiler/test/: compiler_test.cpp  cppgenlib_test.cpp
oblo/script/editor/: CMakeLists.txt
oblo/script/nodes/: CMakeLists.txt
oblo/script/nodes/test/: node_graph_test.cpp
oblo/script/resource/: CMakeLists.txt
oblo/script/resource/reflection/: script_resource_reflection.hpp
oblo/script/runtime/: CMakeLists.txt
oblo/smoke/: CMakeLists.txt
oblo/src/oblo/core/: debug.cpp
oblo/test/: bvh_test.cpp
oblo/thread/: CMakeLists.txt
oblo/thread/test/: job_manager_test.cpp
oblo/vulkan/: CMakeLists.txt
oblo/vulkan/compiler/: CMakeLists.txt
oblo/vulkan/core/: CMakeLists.txt
oblo/vulkan/engine/: CMakeLists.txt
oblo/vulkan/renderer/: CMakeLists.txt
oblo/vulkan/test/: buffer_table_test.cpp  staging_buffer_test.cpp  test_sandbox.hpp
oblo/wasm/runtime/: CMakeLists.txt
oblo/window/: CMakeLists.txt  sandbox.cpp
oblo/window/graphics/: CMakeLists.txt
oblo/window/imgui/: CMakeLists.txt
sandbox/vulkan/: CMakeLists.txt
sandbox/vulkan/shaders/: test.vert
sandbox/vulkan/src/: main.cpp
testing/: CMakeLists.txt
(+1669 files in other folders)
