add_subdirectory(asset)
add_subdirectory(core)
add_subdirectory(cpurt)
add_subdirectory(ecs)
add_subdirectory(engine)
add_subdirectory(importers)
add_subdirectory(modules)
add_subdirectory(render_graph)
add_subdirectory(resource)
add_subdirectory(sandbox)
add_subdirectory(scene)
add_subdirectory(vulkan)