add_subdirectory(asset)
add_subdirectory(core)
add_subdirectory(cpurt)
add_subdirectory(ecs)
add_subdirectory(editor)
add_subdirectory(graphics)
add_subdirectory(importers)
add_subdirectory(input)
add_subdirectory(log)
add_subdirectory(modules)
add_subdirectory(options)
add_subdirectory(properties)
add_subdirectory(reflection)
add_subdirectory(resource)
add_subdirectory(runtime)
add_subdirectory(sandbox)
add_subdirectory(scene)
add_subdirectory(smoke)
add_subdirectory(thread)
add_subdirectory(vulkan)