oblo_add_executable(oblo)

target_link_libraries(
    oblo
    PRIVATE
    oblo::asset
    oblo::editor
    oblo::runtime
    oblo::ecs
    oblo::graphics
    oblo::importers
    oblo::log
    oblo::modules
    oblo::sandbox
    oblo::scene
    oblo::thread
    iconfontcppheaders::iconfontcppheaders
    SDL2::SDL2
    SDL2::SDL2main
)